--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso HTML% com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia totam earum suscipit explicabo delectus tempore asperiores ex architecto consequatur non. Dolore quibusdam velit fugiat porro voluptas, nemo dolorum? Consequuntur, quaerat!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nostrum maxime cumque! Numquam maxime tempore excepturi suscipit quam molestiae impedit unde ullam nihil voluptate dicta quod laborum, omnis, amet blanditiis.</p>
         </article>
     </main>
 </body>
