--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Curso HTML% com CSS3</h2>
+            <h2>Curso HTML5 com CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia totam earum suscipit explicabo delectus tempore asperiores ex architecto consequatur non. Dolore quibusdam velit fugiat porro voluptas, nemo dolorum? Consequuntur, quaerat!</p>
         </article>
         <article>
