--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
     <main>
         <header>
             <h1>Cursos Gratis</h1>
+            <img src="imagens/cursoemvideo-logo.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/html.png" alt="Curso html">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia totam earum suscipit explicabo delectus tempore asperiores ex architecto consequatur non. Dolore quibusdam velit fugiat porro voluptas, nemo dolorum? Consequuntur, quaerat!</p>
+            <p><a href= "">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado"  src="imagens/javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nostrum maxime cumque! Numquam maxime tempore excepturi suscipit quam molestiae impedit unde ullam nihil voluptate dicta quod laborum, omnis, amet blanditiis.</p>
+            <p><a href= ""> o Curso de javascript</a></p>
         </article>
+
+        <iframe width="500" height="315" src="https://www.youtube.com/embed/gMh6lrXibWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 </body>
 </html>
