--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado"  src="imagens/javascript.png" alt="Curso JavaScript">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nostrum maxime cumque! Numquam maxime tempore excepturi suscipit quam molestiae impedit unde ullam nihil voluptate dicta quod laborum, omnis, amet blanditiis.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nostrum maxime cumque! Numquam maxime tempore excepturi suscipit quam molestiae impedit unde ullam nihil voluptate dicta quod laborum, omnis, amet blanditiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, error blanditiis laboriosam deserunt commodi explicabo rem impedit amet fuga magnam optio doloremque similique atque officiis nesciunt eligendi corporis unde reprehenderit.</p>
             <p><a href= ""> o Curso de javascript</a></p>
         </article>
 
